# GSX-Manager

./: .gitignore  README.md
gsx-ini-parser/: Cargo.toml
gsx-ini-parser/res/test/: lszh-fsdt.ini
gsx-ini-parser/src/: lib.rs
gsxman-app/: Cargo.toml  build.rs
gsxman-app/src/: app.rs  core.rs  defaults.rs  main.rs  util.rs
gsxman-app/src/app/: mod.rs  ui.rs
gsxman-app/src/app/ui/: map_panel.rs  menu_bar_panel.rs  mod.rs  plugins.rs  table_panel.rs
gsxman-app/src/core/: filehandler.rs  filehandling.rs  ini_parser.rs  mod.rs
gsxman-app/src/core/filehandling/: mod.rs  profileimporter.rs
gsxman-app/src/core/filehandling/profileimporter/: directimporter.rs  rarimporter.rs  zipimporter.rs
