[package]
name = "gsxman-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
directories = "5.0.1"
geoutils = "0.5.1"
regex = "1.10.4"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
walkers = "0.22.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rfd = "0.14.1"
tracing-appender = "0.2.3"

[profile.release]
opt-level = 1
lto = "thin"
