[package]
name = "gsxman-app"
version = "2.0.0"
edition = "2021"
authors = ["ItsMeNiV"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gsx-ini-parser = { path = "../gsx-ini-parser" }
csv = "1.3.0"
directories = "5.0.1"
geoutils = "0.5.1"
regex = "1.10.4"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
walkers = "0.22.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rfd = "0.14.1"
tracing-appender = "0.2.3"
itertools = "0.13.0"
chrono = "0.4.38"
json = "0.12.4"
zip = "2.1.3"
unrar = "0.5.3"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[profile.release]
opt-level = 1
lto = "thin"

[build-dependencies]
winresource = "0.1.17"
